--- a/mi-primer-website.html
+++ b/mi-primer-website.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Mi Primer Website</title>
+    <title>Mi Primer Websit</title>
 </head>
 <body>
     <header class="container-nav">
         <nav class="navbar">
-          <a href="mi-primer-website.html" class="brand">Mi página web</a>
+          <a href="mi-primer-website.html" class="brand">Mi Pag-web</a>
           <ul class="nav-links">
             <li><a href="mi-primer-website.html">Home</a></li>
             <li><a href="about.html">about</a></li>
